--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             option2.onclick = () => {changeOptions(7)}
         } else if (n == 5) {
             /* "buying into society" quote */
-            top_prompt.innerHTML = '“You must either persuade [society] or obey its orders, and endure in silence whatever it instructs you to endure, whether blows or bonds, and if it leads you into war to be wounded or killed, you must obey” (Crito)'
+            top_prompt.innerHTML = '“You must either persuade [society] or obey its orders, and endure in silence whatever it instructs you to endure, whether blows or bonds, and if it leads you into war to be wounded or killed, you must obey” (Crito 51b)'
             question.innerHTML = "Hmmm... Interesting. Consider the quote above. Would you say you agree with it?"
             option1.innerHTML = "Yes, exactly! I would die for my country without a second thought."
             option1.onclick = () => {changeOptions(9)}
@@ -167,7 +167,7 @@
                 would find it a lot harder to persuade society to change than others, based on their social standing and wealth. How is that right?`
             option2.onclick = () => {changeOptions(11)}
         } else if (n == 11) {
-            top_prompt.innerHTML = `“You have had seventy years during which you could have gone away if you did not like us, and if you thought our agreements unjust” (Personifying Society, in Crito)`
+            top_prompt.innerHTML = `“You have had seventy years during which you could have gone away if you did not like us, and if you thought our agreements unjust” (Crito 52e)`
             question.innerHTML = `Hmmm... I think I see what you mean. Whatever country you're from, it seems to be a lot bigger and more diverse than Rome.
                 Ok, well what about the quote above? You could always just leave the country you are in if you don't like it. By staying in your country, 
                 you are essentially giving it your permission to impose its laws upon you.`
@@ -194,7 +194,7 @@
                 gameOver();
             }
         } else if (n == 13) {
-            top_prompt.innerHTML = `"Do not value either your children or your life or anything else more than your goodness, in order that when you arrive in Hades you may have all this as your defense before the rulers there." (Crito)`
+            top_prompt.innerHTML = `"Do not value either your children or your life or anything else more than your goodness, in order that when you arrive in Hades you may have all this as your defense before the rulers there." (Crito 54b)`
             question.innerHTML = `You're logic is flawed once again. Consider the quote above. It states that nothing should trump living a moral life,
                 not even your children. Although you may feel an emotional relationship to your family, you must be able to put that aside
                 and focus on what is truly important -- upholding the agreement you have with society, and being moral and good.`
